Databank error gefixt

--- a/html/register.html
+++ b/html/register.html
@@ -6,7 +6,7 @@
     <title>Register</title>
 </head>
 <body>
-<form action="http://localhost:8100/register" id="form_register" method="GET">
+<form action="https://gispaulphillipwise2020.herokuapp.com/register" id="form_register" method="GET">
 
     <label for="vorname"><b>Vorname</b></label>
     <input id="vorname" name="vorname" placeholder="Enter Vorname" required type="text">
@@ -21,6 +21,7 @@
     <input id="email" name="email" placeholder="Enter E-mail" required type="text">
 
     <button class="serverabfrage" id="form_btn" type="submit">Datenanfrage an den Server</button>
+    <a href="https://gispaulphillipwise2020.herokuapp.com/list">Userliste</a>
 </form>
 </body>
 </html>
