--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
 </head>
 <body>
-<form action="http://localhost:8100/login" method="get">
+<form action="https://gispaulphillipwise2020.herokuapp.com/login" method="get">
     <label for="password"><b>Password</b></label>
     <input id="password" name="password" placeholder="Enter Password" required type="password">
 
