--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Register</title>
+    <title>Registrierung</title>
 </head>
 <body>
 <form action="https://gispaulphillipwise2020.herokuapp.com/register" id="form_register" method="GET">
